--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="logo">
                 <h4>Wil</h4>
-                <p>UI/UX Designer</p>
+                <p>UI/UX Design</p>
             </div>
 
             <div class="navbar-links">
@@ -83,7 +83,6 @@
     <!-- SKILLS SECTION  -->
 
     <div class="skills-section" id="skills">
-
         <div class="header">
             <h2 class="sub-header">My Toolbox</h2>
             <div class="divider"></div>
@@ -150,7 +149,6 @@
                 d="M0,128L24,112C48,96,96,64,144,90.7C192,117,240,203,288,234.7C336,267,384,245,432,213.3C480,181,528,139,576,128C624,117,672,139,720,133.3C768,128,816,96,864,85.3C912,75,960,85,1008,112C1056,139,1104,181,1152,218.7C1200,256,1248,288,1296,261.3C1344,235,1392,149,1416,106.7L1440,64L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z">
             </path>
         </svg>
-
     </div>
 
     <!-- PORTFOLIO  -->
@@ -173,14 +171,36 @@
         <div class="header">
             <h2 class="sub-header">Contact Me</h2>
             <div class="divider"></div>
+            <p>I am available to work on your projects and bring your ideas to life.</p>
+        </div>
+        <div class="contact-form">
+            <div class="contact-icons">
+                <i class="fa-solid fa-location-dot"><span>Tampa Florida</span></i>
+                <i class="fa-solid fa-envelope"><span>wdiazdev@gmail.com</span></i>
+                <i class="fa-solid fa-phone"><span>407-437-8084</span></i>
+            </div>
+            <form class="form">
+                <input type="text" placeholder="Full Name">
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Phone Number">
+                <textarea placeholder="Enter your message"></textarea>
+                <button class="contact-button"><span>Submit</span></button>
+            </form>
         </div>
     </div>
 
+    <!-- FOOTER  -->
 
-
-
-
-
+    <div class="footer">
+        <div class="footer-content">
+            <h5>Designed & Built by Wilfredo Diaz</h5>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0099ff" fill-opacity="1"
+                d="M0,96L60,112C120,128,240,160,360,149.3C480,139,600,85,720,80C840,75,960,117,1080,138.7C1200,160,1320,160,1380,160L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+            </path>
+        </svg>
+    </div>
 
 
 </body>
