--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <button class="resume-button"><span>Resume</span></button>
 
         <div class="welcome-to">
-            <i class="fa-solid fa-chevron-down"></i>
+            <i class="fa-solid fa-angles-down"></i>
             <h5>Welcome to my little corner of the internet</h5>
-            <i class="fa-solid fa-chevron-down"></i>
+            <i class="fa-solid fa-angles-down"></i>
         </div>
     </div>
 
@@ -77,7 +77,26 @@
         <div class="header">
             <h2 class="sub-header">About Me</h2>
             <div class="divider"></div>
+            <div class="about-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Culpa provident neque harum autem eius
+                    reiciendis a consequuntur excepturi possimus ratione.
+                    Laboriosam dolorem, aspernatur odio enim magni
+                    eius quam at iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Culpa provident neque harum autem eius
+                    reiciendis a consequuntur excepturi possimus ratione.
+                    Laboriosam dolorem, aspernatur odio enim magni
+                    eius quam at iusto?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Culpa provident neque harum autem eius
+                    reiciendis a consequuntur excepturi possimus ratione.
+                    Laboriosam dolorem, aspernatur odio enim magni
+                    eius quam at iusto?</p>
+                <div class="myimage">
+                    <div class="gradient"></div>
+                </div>
+            </div>
         </div>
+
     </div>
 
     <!-- SKILLS SECTION  -->
@@ -201,6 +220,7 @@
             </path>
         </svg>
     </div>
+    <a href="#" id="to-top" class="to-top"><i class="fa-solid fa-angles-up"></i></a>
 
 
 </body>
