--- a/index.html
+++ b/index.html
@@ -15,18 +15,25 @@
     <!-- MAIN SECTION -->
 
     <div class="main" id="home">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#0099ff" fill-opacity="1"
-                d="M0,288L20,277.3C40,267,80,245,120,202.7C160,160,200,96,240,90.7C280,85,320,139,360,186.7C400,235,440,277,480,272C520,267,560,213,600,186.7C640,160,680,160,720,154.7C760,149,800,139,840,138.7C880,139,920,149,960,176C1000,203,1040,245,1080,261.3C1120,277,1160,267,1200,261.3C1240,256,1280,256,1320,250.7C1360,245,1400,235,1420,229.3L1440,224L1440,0L1420,0C1400,0,1360,0,1320,0C1280,0,1240,0,1200,0C1160,0,1120,0,1080,0C1040,0,1000,0,960,0C920,0,880,0,840,0C800,0,760,0,720,0C680,0,640,0,600,0C560,0,520,0,480,0C440,0,400,0,360,0C320,0,280,0,240,0C200,0,160,0,120,0C80,0,40,0,20,0L0,0Z">
+        <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 230" version="1.1"
+            xmlns="http://www.w3.org/2000/svg">
+            <defs>
+                <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+                    <stop stop-color="rgba(25, 28, 50, 1)" offset="0%"></stop>
+                    <stop stop-color="rgba(0, 153, 255, 1)" offset="100%"></stop>
+                </linearGradient>
+            </defs>
+            <path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)"
+                d="M0,115L30,95.8C60,77,120,38,180,53.7C240,69,300,138,360,141.8C420,146,480,84,540,72.8C600,61,660,100,720,126.5C780,153,840,169,900,149.5C960,130,1020,77,1080,46C1140,15,1200,8,1260,23C1320,38,1380,77,1440,95.8C1500,115,1560,115,1620,107.3C1680,100,1740,84,1800,95.8C1860,107,1920,146,1980,168.7C2040,192,2100,199,2160,180.2C2220,161,2280,115,2340,107.3C2400,100,2460,130,2520,130.3C2580,130,2640,100,2700,84.3C2760,69,2820,69,2880,76.7C2940,84,3000,100,3060,107.3C3120,115,3180,115,3240,130.3C3300,146,3360,176,3420,157.2C3480,138,3540,69,3600,38.3C3660,8,3720,15,3780,38.3C3840,61,3900,100,3960,115C4020,130,4080,123,4140,103.5C4200,84,4260,54,4290,38.3L4320,23L4320,230L4290,230C4260,230,4200,230,4140,230C4080,230,4020,230,3960,230C3900,230,3840,230,3780,230C3720,230,3660,230,3600,230C3540,230,3480,230,3420,230C3360,230,3300,230,3240,230C3180,230,3120,230,3060,230C3000,230,2940,230,2880,230C2820,230,2760,230,2700,230C2640,230,2580,230,2520,230C2460,230,2400,230,2340,230C2280,230,2220,230,2160,230C2100,230,2040,230,1980,230C1920,230,1860,230,1800,230C1740,230,1680,230,1620,230C1560,230,1500,230,1440,230C1380,230,1320,230,1260,230C1200,230,1140,230,1080,230C1020,230,960,230,900,230C840,230,780,230,720,230C660,230,600,230,540,230C480,230,420,230,360,230C300,230,240,230,180,230C120,230,60,230,30,230L0,230Z">
             </path>
         </svg>
         <!-- Developer info -->
         <div class="dev-info">
-            <h3>Hi there, I'm</h3>
+            <p>Hi there, I'm</p>
             <h1>Wilfredo Diaz</h1>
-            <h3>I am a Front-End Software Engineer based in Tampa Florida.<br>
-                I'm passionate about turning ideas into real life products.
-            </h3>
+            <p>I am a Front-End Software Engineer based in Tampa Florida.</p>
+            <p>I'm passionate about turning ideas into real life products.</p>
+
         </div>
 
         <!-- Navbar -->
@@ -66,7 +73,7 @@
 
         <div class="welcome-to">
             <i class="fa-solid fa-angles-down"></i>
-            <h5>Welcome to my little corner of the internet</h5>
+            <p>Welcome to my little corner of the internet</p>
             <i class="fa-solid fa-angles-down"></i>
         </div>
     </div>
@@ -132,9 +139,7 @@
                     <i class="fa-brands fa-git-alt"></i>
                     <span>Git</span>
                 </div>
-            </div>
 
-            <div class="icon-container">
                 <div>
                     <i class="fa-brands fa-github"></i>
                     <span>GitHub</span>
@@ -161,19 +166,21 @@
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#0099ff" fill-opacity="1"
-                d="M0,96L60,112C120,128,240,160,360,149.3C480,139,600,85,720,80C840,75,960,117,1080,138.7C1200,160,1320,160,1380,160L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
-            </path>
-        </svg>
     </div>
 
     <!-- PORTFOLIO  -->
 
     <div class="portfolio-section" id="portfolio">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#0099ff" fill-opacity="1"
-                d="M0,224L60,197.3C120,171,240,117,360,112C480,107,600,149,720,138.7C840,128,960,64,1080,64C1200,64,1320,128,1380,160L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+        <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 230" version="1.1"
+            xmlns="http://www.w3.org/2000/svg">
+            <defs>
+                <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+                    <stop stop-color="rgba(25, 28, 50, 1)" offset="0%"></stop>
+                    <stop stop-color="rgba(0, 153, 255, 1)" offset="100%"></stop>
+                </linearGradient>
+            </defs>
+            <path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)"
+                d="M0,115L30,95.8C60,77,120,38,180,53.7C240,69,300,138,360,141.8C420,146,480,84,540,72.8C600,61,660,100,720,126.5C780,153,840,169,900,149.5C960,130,1020,77,1080,46C1140,15,1200,8,1260,23C1320,38,1380,77,1440,95.8C1500,115,1560,115,1620,107.3C1680,100,1740,84,1800,95.8C1860,107,1920,146,1980,168.7C2040,192,2100,199,2160,180.2C2220,161,2280,115,2340,107.3C2400,100,2460,130,2520,130.3C2580,130,2640,100,2700,84.3C2760,69,2820,69,2880,76.7C2940,84,3000,100,3060,107.3C3120,115,3180,115,3240,130.3C3300,146,3360,176,3420,157.2C3480,138,3540,69,3600,38.3C3660,8,3720,15,3780,38.3C3840,61,3900,100,3960,115C4020,130,4080,123,4140,103.5C4200,84,4260,54,4290,38.3L4320,23L4320,230L4290,230C4260,230,4200,230,4140,230C4080,230,4020,230,3960,230C3900,230,3840,230,3780,230C3720,230,3660,230,3600,230C3540,230,3480,230,3420,230C3360,230,3300,230,3240,230C3180,230,3120,230,3060,230C3000,230,2940,230,2880,230C2820,230,2760,230,2700,230C2640,230,2580,230,2520,230C2460,230,2400,230,2340,230C2280,230,2220,230,2160,230C2100,230,2040,230,1980,230C1920,230,1860,230,1800,230C1740,230,1680,230,1620,230C1560,230,1500,230,1440,230C1380,230,1320,230,1260,230C1200,230,1140,230,1080,230C1020,230,960,230,900,230C840,230,780,230,720,230C660,230,600,230,540,230C480,230,420,230,360,230C300,230,240,230,180,230C120,230,60,230,30,230L0,230Z">
             </path>
         </svg>
         <div class="header">
@@ -212,9 +219,16 @@
         <div class="footer-content">
             <h5>Designed & Built by Wilfredo Diaz</h5>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#0099ff" fill-opacity="1"
-                d="M0,96L60,112C120,128,240,160,360,149.3C480,139,600,85,720,80C840,75,960,117,1080,138.7C1200,160,1320,160,1380,160L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+        <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 230" version="1.1"
+            xmlns="http://www.w3.org/2000/svg">
+            <defs>
+                <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+                    <stop stop-color="rgba(25, 28, 50, 1)" offset="0%"></stop>
+                    <stop stop-color="rgba(0, 153, 255, 1)" offset="100%"></stop>
+                </linearGradient>
+            </defs>
+            <path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)"
+                d="M0,115L30,95.8C60,77,120,38,180,53.7C240,69,300,138,360,141.8C420,146,480,84,540,72.8C600,61,660,100,720,126.5C780,153,840,169,900,149.5C960,130,1020,77,1080,46C1140,15,1200,8,1260,23C1320,38,1380,77,1440,95.8C1500,115,1560,115,1620,107.3C1680,100,1740,84,1800,95.8C1860,107,1920,146,1980,168.7C2040,192,2100,199,2160,180.2C2220,161,2280,115,2340,107.3C2400,100,2460,130,2520,130.3C2580,130,2640,100,2700,84.3C2760,69,2820,69,2880,76.7C2940,84,3000,100,3060,107.3C3120,115,3180,115,3240,130.3C3300,146,3360,176,3420,157.2C3480,138,3540,69,3600,38.3C3660,8,3720,15,3780,38.3C3840,61,3900,100,3960,115C4020,130,4080,123,4140,103.5C4200,84,4260,54,4290,38.3L4320,23L4320,230L4290,230C4260,230,4200,230,4140,230C4080,230,4020,230,3960,230C3900,230,3840,230,3780,230C3720,230,3660,230,3600,230C3540,230,3480,230,3420,230C3360,230,3300,230,3240,230C3180,230,3120,230,3060,230C3000,230,2940,230,2880,230C2820,230,2760,230,2700,230C2640,230,2580,230,2520,230C2460,230,2400,230,2340,230C2280,230,2220,230,2160,230C2100,230,2040,230,1980,230C1920,230,1860,230,1800,230C1740,230,1680,230,1620,230C1560,230,1500,230,1440,230C1380,230,1320,230,1260,230C1200,230,1140,230,1080,230C1020,230,960,230,900,230C840,230,780,230,720,230C660,230,600,230,540,230C480,230,420,230,360,230C300,230,240,230,180,230C120,230,60,230,30,230L0,230Z">
             </path>
         </svg>
     </div>
