--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <h1>Wilfredo Diaz.</h1>
             <p>I am a Front-End Software Engineer based in Tampa Florida.</p>
             <p>I'm passionate about turning ideas into real life products.</p>
-            <!-- RESUME BUTTON -->
-            <button class="button"></button>
+            <button class="button">Resume</button>
         </div>
 
-        <!-- RESUME BUTTON -->
 
-        <div class="welcome-to">
-            <i class="fa-solid fa-angles-down"></i>
-            <p>Welcome to my little corner of the internet</p>
-            <i class="fa-solid fa-angles-down"></i>
-        </div>
+    </div>
+
+    <div class="welcome-to">
+        <i class="fa-solid fa-angles-down bounce"></i>
+        <h5>Welcome to my little corner of the internet</h5>
+        <i class="fa-solid fa-angles-down bounce"></i>
+    </div>
 
     </div>
 
@@ -81,8 +81,7 @@
     <div class="skills-section" id="skills">
         <div class="skills-info">
             <h2 class="sub-header">My Toolbox</h2>
-
-            <p>The skills, tools and technologies I use to bring your products to life.</p>
+            <p>Tools and technologies I use to bring your products to life.</p>
             <!-- ICONS  -->
             <ul class="icons">
                 <li>
@@ -161,13 +160,34 @@
         </div>
     </div>
 
-    <!-- PORTFOLIO SECTION  -->
+    <!-- WORK SECTION  -->
 
     <div class="work-section" id="my-work">
-        <div class="portfolio-info">
-            <h2 class="sub-header">My Work</h2>
+        <h2 class="sub-header">My Work</h2>
+        <p>Some Things I’ve Built</p>
 
+        <div class="container">
+
+            <!-- CARD 1 -->
+
+            <div class="cards">
+                <div class="cardcontent">
+                    <div class="project-img">
+                        <img src="./assets/project1.jpg" alt="project 1">
+                    </div>
+                    <h2>Responsive website</h2>
+                    <p class="carddescr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos fugiat saepe
+                        aut, eos error
+                        reprehenderit ducimus necessitatibus animi, qui dignissimos atque fuga, laborum quod. Aliquid
+                        culpa inventore corrupti eveniet.</p>
+                </div>
+                <div class="icon-live">
+                    <i class="fa-brands fa-github"></i>
+                    <a href="#">live</a>
+                </div>
+            </div>
         </div>
+
     </div>
 
     <!-- CONTACT SECTION  -->
@@ -203,9 +223,12 @@
                 <input type="text" placeholder="Email">
                 <input type="text" placeholder="Phone Number">
                 <textarea placeholder="Enter your message!"></textarea>
-                <button class="button"></button>
+                <button class="button">Submit</button>
             </form>
         </div>
+
+        <!-- FOOTER  -->
+
         <div class="footer">
             <div class="footer-content">
                 <h5>Designed & Built by Wilfredo Diaz</h5>
