--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <button class="button">Resume</button>
         </div>
 
-
+        <!-- Welcome-to use to hide Div on scroll -->
+        <div class="welcome-to" id="welcome-to">
+            <i class="fa-solid fa-angles-down bounce"></i>
+            <h5>Welcome to my little corner of the internet</h5>
+            <i class="fa-solid fa-angles-down bounce"></i>
+        </div>
     </div>
 
-    <div class="welcome-to">
-        <i class="fa-solid fa-angles-down bounce"></i>
-        <h5>Welcome to my little corner of the internet</h5>
-        <i class="fa-solid fa-angles-down bounce"></i>
-    </div>
 
     </div>
 
@@ -182,7 +182,7 @@
                         culpa inventore corrupti eveniet.</p>
                 </div>
                 <div class="icon-live">
-                    <i class="fa-brands fa-github"></i>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
                     <a href="#">live</a>
                 </div>
             </div>
@@ -233,8 +233,8 @@
             <div class="footer-content">
                 <h5>Designed & Built by Wilfredo Diaz</h5>
                 <div class="footer-social">
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="3"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
